WorkInProgress/Codeforces - Codeforces Round #319 (Div. 2)/C. Vasya and Petya's Game/attic/stderr
[1m/Users/lsantel/Competitive-Programming/solutions/Codeforces - Codeforces Round #319 (Div. 2)/C. Vasya and Petya's Game/sol.cpp:142:25: [0m[0;1;31merror: [0m[1mexpected ';' after expression[0m
        cout << x << " "
[0;1;32m                        ^
[0m[0;32m                        ;
[0m1 error generated.
